apps/on-prem/phpipam/phpipam-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpipam
  namespace: phpipam
  labels:
    app: phpipam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpipam
  template:
    metadata:
      labels:
        app: phpipam
    spec:
      containers:
      - name: phpipam
        image: pierrecdn/phpipam@sha256:3267dba3072079446cf612fbbe7cb4d632389fc23bd9f4fbba45c095bf25be5e
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 15m
            memory: 105M
        ports:
        - containerPort: 80
          protocol: TCP
