apps/on-prem/phpipam/phpipam-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpipam-ingress
  namespace: phpipam
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - phpipam.binarybraids.com
  rules:
  - host: phpipam.binarybraids.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: phpipam-service
            port: 
              number: 80
